--- a/overlay-havoc/frameworks/base/packages/SystemUI/res/values/havoc_config.xml
+++ b/overlay-havoc/frameworks/base/packages/SystemUI/res/values/havoc_config.xml
@@ -24,4 +24,7 @@
     <integer name="config_maxVisibleNotificationIcons">5</integer>
     <integer name="config_maxVisibleNotificationIconsWhenDark">6</integer>
 
+    <!-- Show battery icon in the QS Panel instead of in the header -->
+    <bool name="config_batteryInQSPanel">false</bool>
+
 </resources>
