--- a/overlay-havoc/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-havoc/frameworks/base/core/res/res/values/config.xml
@@ -26,4 +26,6 @@
     <!-- Whether device has a notch -->
     <bool name="config_haveNotch">true</bool>
 
+    <!-- Show a custom view for FOD -->
+    <bool name="config_needCustomFODView">true</bool>
 </resources>
