--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -1096,5 +1096,8 @@
         <item>org.lineageos.settings.device.KeyHandler</item>
         <item>com.android.touch.gestures.KeyHandler</item>
     </string-array>
+
+    <!-- Whether device ignores the RSSNR signal implementation -->
+     <bool name="config_ignoreRssnrSignalLevel">true</bool>
   
 </resources>
